crates/core/tests/snapshots/field_default_test__field_default__handles_collections.snap
---
source: crates/core/tests/field_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    Ok(
        Some(Self {
            a: Some(HashMap::default()),
            b: Some(Vec::default()),
            c: Some(BTreeSet::default()),
            d: Some(CustomVec::default()),
            e: Some(UnknownCollection::default()),
        }),
    )
}
