crates/core/tests/snapshots/field_default_test__field_default__handles_layers.snap
---
source: crates/core/tests/field_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    Ok(
        Some(Self {
            b: Some(Arc::new(Default::default())),
            c: Some(Box::new(Default::default())),
            d: Some(Rc::new(Some(Default::default()))),
            e: Some(Arc::new(Vec::default())),
            ..Default::default()
        }),
    )
}
