crates/core/tests/snapshots/field_default_test__field_default__supports_array.snap
---
source: crates/core/tests/field_default_test.rs
expression: field.args.default.as_ref().unwrap()
---
Expr::Array {
    attrs: [],
    bracket_token: Bracket,
    elems: [
        Expr::MethodCall {
            attrs: [],
            receiver: Expr::Lit {
                attrs: [],
                lit: Lit::Str {
                    token: "a",
                },
            },
            dot_token: Dot,
            method: Ident(
                into,
            ),
            turbofish: None,
            paren_token: Paren,
            args: [],
        },
        Comma,
        Expr::MethodCall {
            attrs: [],
            receiver: Expr::Lit {
                attrs: [],
                lit: Lit::Str {
                    token: "b",
                },
            },
            dot_token: Dot,
            method: Ident(
                into,
            ),
            turbofish: None,
            paren_token: Paren,
            args: [],
        },
        Comma,
        Expr::MethodCall {
            attrs: [],
            receiver: Expr::Lit {
                attrs: [],
                lit: Lit::Str {
                    token: "c",
                },
            },
            dot_token: Dot,
            method: Ident(
                into,
            ),
            turbofish: None,
            paren_token: Paren,
            args: [],
        },
    ],
}
