crates/core/tests/snapshots/field_default_test__field_default__supports_bool.snap
---
source: crates/core/tests/field_default_test.rs
expression: field.args.default.as_ref().unwrap()
---
Expr::Lit {
    attrs: [],
    lit: Lit::Bool {
        value: true,
    },
}
