crates/core/tests/snapshots/field_default_test__field_default__supports_tuple.snap
---
source: crates/core/tests/field_default_test.rs
expression: field.args.default.as_ref().unwrap()
---
Expr::Tuple {
    attrs: [],
    paren_token: Paren,
    elems: [
        Expr::Lit {
            attrs: [],
            lit: Lit::Int {
                token: 10,
            },
        },
        Comma,
        Expr::Unary {
            attrs: [],
            op: UnOp::Neg(
                Minus,
            ),
            expr: Expr::Lit {
                attrs: [],
                lit: Lit::Int {
                    token: 10,
                },
            },
        },
        Comma,
        Expr::Lit {
            attrs: [],
            lit: Lit::Int {
                token: 0,
            },
        },
    ],
}
